--- a/code/adv/tte_demo/Makefile
+++ b/code/adv/tte_demo/Makefile
@@ -76,7 +76,7 @@ CFLAGS	+= -ffast-math -fno-strict-aliasing
 
 CXXFLAGS	:= $(CFLAGS) -fno-rtti -fno-exceptions
 
-ASFLAGS	:= $(ARCH)
+ASFLAGS	:= $(ARCH) $(INCLUDE)
 LDFLAGS := $(ARCH) -Wl,-Map,$(PROJ).map
 
 # --- switched additions ----------------------------------------------
