--- a/scripts/config.json
+++ b/scripts/config.json
@@ -2,14 +2,14 @@
 	"autoref": {
 		"srcdir": "../prehtml",
 		"dstdir": "../text",
-		"files": [
-			{ "fname": "bitmaps.htm", "ch": "5" }
-		],
 		"files2": [
+			{ "fname": "bitmaps.htm", "ch": "n5" }
+		],
+		"files": [
 			{ "fname": "portal.htm", "ignore": true },
-			{ "fname": "toc.htm", "ch": "i" },
+			{ "fname": "toc.htm", "ch": "r" },
 			{ "fname": "intro.htm" },
-			{ "fname": "hardware.htm", "ch": "1" },
+			{ "fname": "hardware.htm", "ch": "n" },
 			{ "fname": "setup.htm" },
 			{ "fname": "first.htm" },
 			{ "fname": "video.htm" },
