--- a/code/basic/sbb_reg/Makefile
+++ b/code/basic/sbb_reg/Makefile
@@ -8,7 +8,7 @@
 # devkitPro's templates ( $(DEVKITPRO)/examples/gba/template )
 # or libtonc's templates ( $(TONCCODE)/lab/template )
 
-PATH := $(DEVKITARM)/bin:$(PATH)
+export PATH	:=	$(DEVKITARM)/bin:$(DEVKITPRO)/tools/bin:$(PATH)
 
 # --- Project details -------------------------------------------------
 
