--- a/code/ext/dma_demo/Makefile
+++ b/code/ext/dma_demo/Makefile
@@ -8,7 +8,7 @@
 # or libtonc's templates ( $(TONCCODE)/lab/template )
 
 
-PATH := $(DEVKITARM)/bin:$(PATH)
+export PATH	:=	$(DEVKITARM)/bin:$(DEVKITPRO)/tools/bin:$(PATH)
 
 # --- Project details -------------------------------------------------
 
