--- a/code/ext/oacombo/Makefile
+++ b/code/ext/oacombo/Makefile
@@ -7,7 +7,7 @@
 # devkitPro's templates ( $(DEVKITPRO)/examples/gba/template )
 # or libtonc's templates ( $(TONCCODE)/lab/template )
 
-PATH := $(DEVKITARM)/bin:$(PATH)
+export PATH	:=	$(DEVKITARM)/bin:$(DEVKITPRO)/tools/bin:$(PATH)
 
 # --- Project details -------------------------------------------------
 
@@ -29,7 +29,7 @@ SSRC    := oe_rs_ex.s
 # boot mode: cart/multiboot
 bMB     := 0
 # Generate asm for C files 
-bGENASM := 1
+bGENASM := 0
 # generate map file
 bMAP    := 0
 
